--- a/env.yaml
+++ b/env.yaml
@@ -3,12 +3,15 @@ channels:
   - conda-forge
   - default
 dependencies:
-  - python
+  - python=3.8
   - pip
+  - jupyter
   - jupyterlab
   - numpy
   - matplotlib
   - scipy
   - pandas
+  - pyinstaller
+  - xlsxwriter
   - pip:
       - nmrglue
