--- a/env.yaml
+++ b/env.yaml
@@ -1,5 +1,6 @@
 name: autochem
 channels:
+  - plotly
   - conda-forge
   - default
 dependencies:
@@ -14,5 +15,10 @@ dependencies:
   - pyinstaller
   - openpyxl
   - opencv
+  - numba
+  - scikit-learn
+  - scikit-image
+  - optuna
+  - plotly
   - pip:
       - nmrglue
