--- a/scripts/nmr/workflow/find_all.yaml
+++ b/scripts/nmr/workflow/find_all.yaml
@@ -3,14 +3,14 @@ data_processing:
   - normalization
 
 peak_picking:
-  min_height: 0.0
-  min_distance: 0.0
+  min_height: 0.01
+  min_distance: 0.1
 
 parse_subfolders: True
 
 plotting:
-  #raw_data: True
-  #processed_data: True
-  #zoomed_data: True
+  raw_data: True
+  processed_data: True
+  zoomed_data: True
   result: True
 cutoff_ouside_data: True
