--- a/scripts/nmr/workflow/find_specific.yaml
+++ b/scripts/nmr/workflow/find_specific.yaml
@@ -31,27 +31,12 @@ peak_picking:
       - 6.2
     - - 6.2
       - 7.0
-  #  - - 0.2
-  #    - 1.15
-  #  - - 1.18
-  #    -  1.8
-  #  - - 2.0
-  #    - 2.8
-  #  - - 5.6
-  #    - 6.2
-  #  - - 6.2
-  #    - 7.1
-
-reference:
-  ppm: 6.75
-  area: 1 #3
-
 parse_subfolders: True
 
 plotting:
-  #raw_data: True
-  #processed_data: True
-  #zoomed_data: True
+  raw_data: True
+  processed_data: True
+  zoomed_data: True
   result: True
 
 cutoff_ouside_data: True
