--- a/scripts/nmr/workflow/find_all.yaml
+++ b/scripts/nmr/workflow/find_all.yaml
@@ -1,10 +1,13 @@
 data_processing:
-  - baseline_correction: median
   - normalization
+  - baseline_correction: median
+  - scaling:
+      max: 1
 
 peak_picking:
   min_height: 0.01
   min_distance: 0.1
+  max_width: 5
 
 parse_subfolders: True
 
@@ -13,4 +16,5 @@ plotting:
   processed_data: True
   zoomed_data: True
   result: True
+
 cutoff_ouside_data: True
